@@ -21,6 +21,7 @@ SVN
 -bug#0001882: lib/snmp.php fails if if max_oids undefined in snmp_walk function call
 -bug#0001885: ping.pl does not account for ping using icmp_req rather than icmp_seq in some versions of ping 
 -bug#0001903: Undefined variable: mode in lib/ldap.php on line 375 
+-bug#0001918: Script server doesn't accept more than 1 blank space before the function name 
 -bug#0001926: Importing templates "using defaults for this installation" associates all rra's defined
 -bug#0001928: graph_image.php does not check local_graph_id
 -bug#0001934: Poller sig_handler Bug
